--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
 
 <body>
     <div id="app">
+        <div class="container m-3">
+            <ul v-if="mailList.length === 10">
+                <li v-for="mail in mailList">
+                    {{mail.response}}
+                </li>
+            </ul>
+        </div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js"
+        integrity="sha512-nnNHpffPSgINrsR8ZAIgFUIMexORL5tPwsfktOTxVYSv+AUAILuFYWES8IHl+hhIhpFGlKvWFiz9ZEusrPcSBQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="./js/script.js"></script>
 </body>
